--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       padding: 20px;
       text-align: center;
     }
+    header h1 {
+      color: #ffffff;
+    }
     section {
       padding: 20px;
     }
@@ -76,12 +79,12 @@
     <h2>Serviços Oferecidos</h2>
     <div class="services">
       <div class="card">
-        <img src="https://via.placeholder.com/300x200.png?text=Atendimento+Médico" alt="Atendimento Médico">
+        <img src="img/atendimento.jpg" alt="Atendimento Médico">
         <h3>Atendimento Médico</h3>
         <p>Consultas com especialistas em diversas áreas, com foco em prevenção e diagnóstico preciso.</p>
       </div>
       <div class="card">
-        <img src="https://via.placeholder.com/300x200.png?text=Exames+Laboratoriais" alt="Exames Laboratoriais">
+        <img src="img/exames.jpg" alt="Exames Laboratoriais">
         <h3>Exames Laboratoriais</h3>
         <p>Ampla gama de exames laboratoriais e de imagem com resultados rápidos e confiáveis.</p>
       </div>
@@ -92,17 +95,17 @@
     <h2>Nossa Equipe</h2>
     <div class="team">
       <div class="card">
-        <img src="https://via.placeholder.com/300x300.png?text=Dr.+Carlos+Silva" alt="Dr. Carlos Silva">
+        <img src="img/carlos.jpg" alt="Dr. Carlos Silva">
         <h3>Dr. Carlos Silva</h3>
         <p>Clínico Geral</p>
       </div>
       <div class="card">
-        <img src="https://via.placeholder.com/300x300.png?text=Dra.+Mariana+Rocha" alt="Dra. Mariana Rocha">
+        <img src="img/mariana.jpg" alt="Dra. Mariana Rocha">
         <h3>Dra. Mariana Rocha</h3>
         <p>Nutricionista</p>
       </div>
       <div class="card">
-        <img src="https://via.placeholder.com/300x300.png?text=Dr.+Eduardo+Lima" alt="Dr. Eduardo Lima">
+        <img src="img/eduardo.jpg" alt="Dr. Eduardo Lima">
         <h3>Dr. Eduardo Lima</h3>
         <p>Radiologista</p>
       </div>
