--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <p>Consultas com especialistas em diversas áreas, com foco em prevenção e diagnóstico preciso.</p>
       </div>
       <div class="card">
-        <img src="img/exames.jpg" alt="Exames Laboratoriais">
+        <img src="img/laboratorio.jpg" alt="Exames Laboratoriais">
         <h3>Exames Laboratoriais</h3>
         <p>Ampla gama de exames laboratoriais e de imagem com resultados rápidos e confiáveis.</p>
       </div>
