--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="card">
         <img src="img/laboratorio.jpg" alt="Exames Laboratoriais">
         <h3>Exames Laboratoriais</h3>
-        <p>Ampla gama de exames laboratoriais e de imagem com resultados rápidos e confiáveis.</p>
+        <p>Ampla gama de exames laboratoriais e de imagem com resultados rápidos, confiáveis e precisos.</p>
       </div>
     </div>
   </section>
